fixed uncertainty order and added uncs for bbtt

--- a/config/x_hh_bbtautau_run2.yaml
+++ b/config/x_hh_bbtautau_run2.yaml
@@ -7,9 +7,9 @@ model:
 hist_bins: /afs/cern.ch/work/v/vdamante/FLAF/StatInference/config/hhbbtautau_binning.json
 eras:
   - Run_2018
-  # - Run_2017
-  # - Run_2016
-  # - Run_2016_HIPM
+  - Run_2017
+  - Run_2016
+  - Run_2016_HIPM
 channels:
   - eTau
   - muTau
@@ -26,7 +26,7 @@ processes:
   - process: GluGluToRadionToHHTo2B2Tau_M_${MX}
     hist_name: GluGluToRadionToHHTo2B2Tau_M-${MX}
     param_values: [ 250, 260, 270, 280, 300, 320, 350, 400, 450, 500, 550, 600, 650, 700, 750, 800, 850, 900,
-                    1000, 1250, 1500, 1750, 2000, 2500, 3000,  ]
+                    1000, 1250, 1500, 1750, 2000, 2500, 3000]
     is_signal: true
     scale: 2 * 6.272E-02 * 5.824E-01
   - process: TT
@@ -310,6 +310,10 @@ uncertainties:
       type: lnN
       processes:
       - ggH
+    - value: [0.058, -0.092] # da Higgs_XSBR_YR4_update https://twiki.cern.ch/twiki/bin/view/LHCPhysics/CERNYellowReportPageAt13TeV
+      type: lnN
+      processes:
+      - ttH
   - name: alpha_s # tutte da Higgs_XSBR_YR4_update https://twiki.cern.ch/twiki/bin/view/LHCPhysics/CERNYellowReportPageAt13TeV tranne quelle di TT che vengono da https://twiki.cern.ch/twiki/bin/view/LHCPhysics/TtbarNNLO#Proposed_citation_and_list_of_re,
     type: lnN
     hasMultipleValues: True
@@ -377,11 +381,109 @@ uncertainties:
       processes:
       - ST_tW
 
+
+
   - name: QCD_norm
     type: lnN
     hasMultipleValues: True
     value:
-    - value: 0.0421311215515085
+    - value: [0.009656399006128705, -0.009656399006128705]
+      type: lnN
+      channels:
+        - eTau
+      categories:
+        - res2b_cat3_masswindow
+      eras:
+        - Run2_2016_HIPM
+    - value: [0.01444628035, -0.00206446892]
+      type: lnN
+      channels:
+        - muTau
+      categories:
+        - res2b_cat3_masswindow
+      eras:
+        - Run2_2016_HIPM
+    - value: [0.11666345451, -0.08689777961]
+      type: lnN
+      channels:
+        - tauTau
+      categories:
+        - res2b_cat3_masswindow
+      eras:
+        - Run2_2016_HIPM
+    - value: [0.0191425826, -0.01092119283]
+      type: lnN
+      channels:
+        - eTau
+      categories:
+        - res1b_cat3_masswindow
+      eras:
+        - Run2_2016_HIPM
+    - value: [0.01306500489, -0.00780485182]
+      type: lnN
+      channels:
+        - muTau
+      categories:
+        - res1b_cat3_masswindow
+      eras:
+        - Run2_2016_HIPM
+    - value: [0.030550263, -0.02199441796]
+      type: lnN
+      channels:
+        - tauTau
+      categories:
+        - res1b_cat3_masswindow
+      eras:
+        - Run2_2016_HIPM
+    - value: [0.01740575468, -0.00757258501]
+      type: lnN
+      channels:
+        - eTau
+      categories:
+        - res2b_cat3_masswindow
+      eras:
+        - Run2_2017
+    - value: [0.01408321349, -0.0078048736]
+      type: lnN
+      channels:
+        - muTau
+      categories:
+        - res2b_cat3_masswindow
+      eras:
+        - Run2_2017
+    - value: [0.10846587103, -0.08091693883]
+      type: lnN
+      channels:
+        - tauTau
+      categories:
+        - res2b_cat3_masswindow
+      eras:
+        - Run2_2017
+    - value: [0.01334385895, -0.00897870239]
+      type: lnN
+      channels:
+        - eTau
+      categories:
+        - res1b_cat3_masswindow
+      eras:
+        - Run2_2017
+    - value: [0.01021550884, -0.00697258664]
+      type: lnN
+      channels:
+        - muTau
+      categories:
+        - res1b_cat3_masswindow
+      eras:
+        - Run2_2017
+    - value: [0.03046458504, -0.0225087099]
+      type: lnN
+      channels:
+        - tauTau
+      categories:
+        - res1b_cat3_masswindow
+      eras:
+        - Run2_2017
+    - value: [0.004924983923070347, -0.004924983923070347]
       type: lnN
       channels:
         - eTau
@@ -389,7 +491,7 @@ uncertainties:
         - res2b_cat3_masswindow
       eras:
         - Run2_2018
-    - value: 0.0011414999477474851
+    - value: [0.0037529744266716998, -0.0037529744266716998]
       type: lnN
       channels:
         - muTau
@@ -397,7 +499,7 @@ uncertainties:
         - res2b_cat3_masswindow
       eras:
         - Run2_2018
-    - value: 0.07225776708262784
+    - value: [0.08382179835, -0.06154450128]
       type: lnN
       channels:
         - tauTau
@@ -405,7 +507,7 @@ uncertainties:
         - res2b_cat3_masswindow
       eras:
         - Run2_2018
-    - value: 0.004840832311097064
+    - value: [0.0072802869, -0.00234989877]
       type: lnN
       channels:
         - eTau
@@ -413,7 +515,7 @@ uncertainties:
         - res1b_cat3_masswindow
       eras:
         - Run2_2018
-    - value: 0.0051828358274559625
+    - value: [0.00622968627, -0.0032116192]
       type: lnN
       channels:
         - muTau
@@ -421,7 +523,7 @@ uncertainties:
         - res1b_cat3_masswindow
       eras:
         - Run2_2018
-    - value: 0.021042022492051775
+    - value: [0.02440263571, -0.01777897816]
       type: lnN
       channels:
         - tauTau
@@ -429,30 +531,54 @@ uncertainties:
         - res1b_cat3_masswindow
       eras:
         - Run2_2018
-    - value: 0.003382579229981518
+    - value: [0.0106481005023334, -0.0106481005023334]
       type: lnN
       channels:
         - eTau
       categories:
-        - baseline_masswindow
+        - res2b_cat3_masswindow
       eras:
-        - Run2_2018
-    - value: 0.0029444915737650195
+        - Run2_2016
+    - value: [0.01939525705, -0.00942433941]
       type: lnN
       channels:
         - muTau
       categories:
-        - baseline_masswindow
+        - res2b_cat3_masswindow
       eras:
-        - Run2_2018
-    - value: 0.007229391684982035
+        - Run2_2016
+    - value: [0.16802367521, -0.1248981272]
       type: lnN
       channels:
         - tauTau
       categories:
-        - baseline_masswindow
+        - res2b_cat3_masswindow
       eras:
-        - Run2_2018
+        - Run2_2016
+    - value: [0.021709472, -0.01488938423]
+      type: lnN
+      channels:
+        - eTau
+      categories:
+        - res1b_cat3_masswindow
+      eras:
+        - Run2_2016
+    - value: [0.01450547471, -0.00996229152]
+      type: lnN
+      channels:
+        - muTau
+      categories:
+        - res1b_cat3_masswindow
+      eras:
+        - Run2_2016
+    - value: [0.03866770002, -0.02850040993]
+      type: lnN
+      channels:
+        - tauTau
+      categories:
+        - res1b_cat3_masswindow
+      eras:
+        - Run2_2016
 
   - name: CMS_btag_HF
     type: auto
@@ -631,6 +757,26 @@ uncertainties:
     type: auto
     eras:
     - Run_2016_HIPM
+
+
+
+  - name: CMS_eff_m_id_2018
+    type: auto
+    eras:
+    - Run_2018
+  - name: CMS_eff_m_id_2017
+    type: auto
+    eras:
+    - Run_2017
+  - name: CMS_eff_m_id_2016
+    type: auto
+    eras:
+    - Run_2016
+  - name: CMS_eff_m_id_2016_HIPM
+    type: auto
+    eras:
+    - Run_2016_HIPM
+
 
   - name: CMS_eff_e_2018
     type: auto
@@ -1025,6 +1171,22 @@ uncertainties:
     type: auto
     eras:
     - Run_2016_HIPM
+  - name: CMS_eff_m_id_highpt_2016
+    type: auto
+    eras:
+    - Run_2016
+  - name: CMS_eff_m_id_highpt_2016_HIPM
+    type: auto
+    eras:
+    - Run_2016_HIPM
+  - name: CMS_eff_m_id_highpt_2017
+    type: auto
+    eras:
+    - Run_2017
+  - name: CMS_eff_m_id_highpt_2018
+    type: auto
+    eras:
+    - Run_2018
   - name: CMS_eff_m_id_reco_highpt_2018
     type: auto
     eras:
@@ -1075,308 +1237,308 @@ uncertainties:
     eras:
     - Run_2016_HIPM
   - name: CMS_scale_t_DM0_2018
-    type: auto
+    type: shape
     eras:
     - Run_2018
   - name: CMS_scale_t_DM0_2017
-    type: auto
+    type: shape
     eras:
     - Run_2017
   - name: CMS_scale_t_DM0_2016
-    type: auto
+    type: shape
     eras:
     - Run_2016
   - name: CMS_scale_t_DM0_2016_HIPM
-    type: auto
+    type: shape
     eras:
     - Run_2016_HIPM
   - name: CMS_scale_t_DM1_2018
-    type: auto
+    type: shape
     eras:
     - Run_2018
   - name: CMS_scale_t_DM1_2017
-    type: auto
+    type: shape
     eras:
     - Run_2017
   - name: CMS_scale_t_DM1_2016
-    type: auto
+    type: shape
     eras:
     - Run_2016
   - name: CMS_scale_t_DM1_2016_HIPM
-    type: auto
+    type: shape
     eras:
     - Run_2016_HIPM
   - name: CMS_scale_t_3prong_2018
-    type: auto
+    type: shape
     eras:
     - Run_2018
   - name: CMS_scale_t_3prong_2017
-    type: auto
+    type: shape
     eras:
     - Run_2017
   - name: CMS_scale_t_3prong_2016
-    type: auto
+    type: shape
     eras:
     - Run_2016
   - name: CMS_scale_t_3prong_2016_HIPM
-    type: auto
+    type: shape
     eras:
     - Run_2016_HIPM
   - name: CMS_scale_t_eFake_DM0_2018
-    type: auto
+    type: shape
     eras:
     - Run_2018
   - name: CMS_scale_t_eFake_DM0_2017
-    type: auto
+    type: shape
     eras:
     - Run_2017
   - name: CMS_scale_t_eFake_DM0_2016
-    type: auto
+    type: shape
     eras:
     - Run_2016
   - name: CMS_scale_t_eFake_DM0_2016_HIPM
-    type: auto
+    type: shape
     eras:
     - Run_2016_HIPM
   - name: CMS_scale_t_eFake_DM1_2018
-    type: auto
+    type: shape
     eras:
     - Run_2018
   - name: CMS_scale_t_eFake_DM1_2017
-    type: auto
+    type: shape
     eras:
     - Run_2017
   - name: CMS_scale_t_eFake_DM1_2016
-    type: auto
+    type: shape
     eras:
     - Run_2016
   - name: CMS_scale_t_eFake_DM1_2016_HIPM
-    type: auto
+    type: shape
     eras:
     - Run_2016_HIPM
   - name: CMS_scale_t_muFake_2018
-    type: auto
+    type: shape
     eras:
     - Run_2018
   - name: CMS_scale_t_muFake_2017
-    type: auto
+    type: shape
     eras:
     - Run_2017
   - name: CMS_scale_t_muFake_2016
-    type: auto
+    type: shape
     eras:
     - Run_2016
   - name: CMS_scale_t_muFake_2016_HIPM
-    type: auto
+    type: shape
     eras:
     - Run_2016_HIPM
   - name: CMS_res_j_2018
-    type: auto
+    type: shape
     eras:
     - Run_2018
     categories:
     - res1b_cat3_masswindow
     - res2b_cat3_masswindow
   - name: CMS_res_j_2017
-    type: auto
+    type: shape
     eras:
     - Run_2017
     categories:
     - res1b_cat3_masswindow
     - res2b_cat3_masswindow
   - name: CMS_res_j_2016
-    type: auto
+    type: shape
     eras:
     - Run_2016
     categories:
     - res1b_cat3_masswindow
     - res2b_cat3_masswindow
   - name: CMS_res_j_2016_HIPM
-    type: auto
+    type: shape
     eras:
     - Run_2016_HIPM
     categories:
     - res1b_cat3_masswindow
     - res2b_cat3_masswindow
   - name: CMS_scale_j_Abs
-    type: auto
+    type: shape
     categories:
     - res1b_cat3_masswindow
     - res2b_cat3_masswindow
   - name: CMS_scale_j_Abs_2018
-    type: auto
+    type: shape
     eras:
     - Run_2018
     categories:
     - res1b_cat3_masswindow
     - res2b_cat3_masswindow
   - name: CMS_scale_j_Abs_2017
-    type: auto
+    type: shape
     eras:
     - Run_2017
   - name: CMS_scale_j_Abs_2016
-    type: auto
+    type: shape
     eras:
     - Run_2016
     categories:
     - res1b_cat3_masswindow
     - res2b_cat3_masswindow
   - name: CMS_scale_j_Abs_2016_HIPM
-    type: auto
+    type: shape
     eras:
     - Run_2016_HIPM
     categories:
     - res1b_cat3_masswindow
     - res2b_cat3_masswindow
   - name: CMS_scale_j_BBEC1
-    type: auto
+    type: shape
     eras: ["2018", "2017", "2016", "2016_HIPM"]
   - name: CMS_scale_j_BBEC1_2018
-    type: auto
+    type: shape
     eras:
     - Run_2018
     categories:
     - res1b_cat3_masswindow
     - res2b_cat3_masswindow
   - name: CMS_scale_j_BBEC1_2017
-    type: auto
+    type: shape
     eras:
     - Run_2017
     categories:
     - res1b_cat3_masswindow
     - res2b_cat3_masswindow
   - name: CMS_scale_j_BBEC1_2016
-    type: auto
+    type: shape
     eras:
     - Run_2016
     categories:
     - res1b_cat3_masswindow
     - res2b_cat3_masswindow
   - name: CMS_scale_j_BBEC1_2016_HIPM
-    type: auto
+    type: shape
     eras:
     - Run_2016_HIPM
     categories:
     - res1b_cat3_masswindow
     - res2b_cat3_masswindow
   - name: CMS_scale_j_EC2
-    type: auto
+    type: shape
     categories:
     - res1b_cat3_masswindow
     - res2b_cat3_masswindow
   - name: CMS_scale_j_EC2_2018
-    type: auto
+    type: shape
     eras:
     - Run_2018
     categories:
     - res1b_cat3_masswindow
     - res2b_cat3_masswindow
   - name: CMS_scale_j_EC2_2017
-    type: auto
+    type: shape
     eras:
     - Run_2017
     categories:
     - res1b_cat3_masswindow
     - res2b_cat3_masswindow
   - name: CMS_scale_j_EC2_2016
-    type: auto
+    type: shape
     eras:
     - Run_2016
     categories:
     - res1b_cat3_masswindow
     - res2b_cat3_masswindow
   - name: CMS_scale_j_EC2_2016_HIPM
-    type: auto
+    type: shape
     eras:
     - Run_2016_HIPM
     categories:
     - res1b_cat3_masswindow
     - res2b_cat3_masswindow
   - name: CMS_scale_j_FlavQCD
-    type: auto
+    type: shape
     categories:
     - res1b_cat3_masswindow
     - res2b_cat3_masswindow
   - name: CMS_scale_j_HF
-    type: auto
+    type: shape
     categories:
     - res1b_cat3_masswindow
     - res2b_cat3_masswindow
   - name: CMS_scale_j_HF_2018
-    type: auto
+    type: shape
     eras:
     - Run_2018
     categories:
     - res1b_cat3_masswindow
     - res2b_cat3_masswindow
   - name: CMS_scale_j_HF_2017
-    type: auto
+    type: shape
     eras:
     - Run_2017
     categories:
     - res1b_cat3_masswindow
     - res2b_cat3_masswindow
   - name: CMS_scale_j_HF_2016
-    type: auto
+    type: shape
     eras:
     - Run_2016
     categories:
     - res1b_cat3_masswindow
     - res2b_cat3_masswindow
   - name: CMS_scale_j_HF_2016_HIPM
-    type: auto
+    type: shape
     eras:
     - Run_2016_HIPM
     categories:
     - res1b_cat3_masswindow
     - res2b_cat3_masswindow
   - name: CMS_scale_j_RelBal
-    type: auto
+    type: shape
     categories:
     - res1b_cat3_masswindow
     - res2b_cat3_masswindow
   - name: CMS_scale_j_RelSample_2018
-    type: auto
+    type: shape
     eras:
     - Run_2018
     categories:
     - res1b_cat3_masswindow
     - res2b_cat3_masswindow
   - name: CMS_scale_j_RelSample_2017
-    type: auto
+    type: shape
     eras:
     - Run_2017
     categories:
     - res1b_cat3_masswindow
     - res2b_cat3_masswindow
   - name: CMS_scale_j_RelSample_2016
-    type: auto
+    type: shape
     eras:
     - Run_2016
     categories:
     - res1b_cat3_masswindow
     - res2b_cat3_masswindow
   - name: CMS_scale_j_RelSample_2016_HIPM
-    type: auto
+    type: shape
     eras:
     - Run_2016_HIPM
     categories:
     - res1b_cat3_masswindow
     - res2b_cat3_masswindow
   - name: CMS_scale_qcd_2018
-    type: auto
+    type: shape
     eras:
     - Run_2018
   - name: CMS_scale_qcd_2017
-    type: auto
+    type: shape
     eras:
     - Run_2017
   - name: CMS_scale_qcd_2016
-    type: auto
+    type: shape
     eras:
     - Run_2016
   - name: CMS_scale_qcd_2016_HIPM
-    type: auto
+    type: shape
     eras:
     - Run_2016_HIPM
   - name: CMS_pnet_2018
@@ -1491,54 +1653,54 @@ uncertainties:
     type: auto
     eras:
     - Run_2016_HIPM
-  # - name: CMS_bbtt_trig_singleEle_2018
-  #   type: auto
-  #   channels:
-  #   - eTau
-  #   eras:
-  #   - Run_2018
-  # - name: CMS_bbtt_trig_singleEle_2017
-  #   type: auto
-  #   channels:
-  #   - eTau
-  #   eras:
-  #   - Run_2017
-  # - name: CMS_bbtt_trig_singleEle_2016
-  #   type: auto
-  #   channels:
-  #   - eTau
-  #   eras:
-  #   - Run_2016
-  # - name: CMS_bbtt_trig_singleEle_2016_HIPM
-  #   type: auto
-  #   channels:
-  #   - eTau
-  #   eras:
-  #   - Run_2016_HIPM
-  # - name: CMS_bbtt_trig_singleMu_2018
-  #   type: auto
-  #   channels:
-  #   - muTau
-  #   eras:
-  #   - Run_2018
-  # - name: CMS_bbtt_trig_singleMu_2017
-  #   type: auto
-  #   channels:
-  #   - muTau
-  #   eras:
-  #   - Run_2017
-  # - name: CMS_bbtt_trig_singleMu_2016
-  #   type: auto
-  #   channels:
-  #   - muTau
-  #   eras:
-  #   - Run_2016
-  # - name: CMS_bbtt_trig_singleMu_2016_HIPM
-  #   type: auto
-  #   channels:
-  #   - muTau
-  #   eras:
-  #   - Run_2016_HIPM
+  - name: CMS_bbtt_trig_singleEle_2018
+    type: auto
+    channels:
+    - eTau
+    eras:
+    - Run_2018
+  - name: CMS_bbtt_trig_singleEle_2017
+    type: auto
+    channels:
+    - eTau
+    eras:
+    - Run_2017
+  - name: CMS_bbtt_trig_singleEle_2016
+    type: auto
+    channels:
+    - eTau
+    eras:
+    - Run_2016
+  - name: CMS_bbtt_trig_singleEle_2016_HIPM
+    type: auto
+    channels:
+    - eTau
+    eras:
+    - Run_2016_HIPM
+  - name: CMS_bbtt_trig_singleMu_2018
+    type: auto
+    channels:
+    - muTau
+    eras:
+    - Run_2018
+  - name: CMS_bbtt_trig_singleMu_2017
+    type: auto
+    channels:
+    - muTau
+    eras:
+    - Run_2017
+  - name: CMS_bbtt_trig_singleMu_2016
+    type: auto
+    channels:
+    - muTau
+    eras:
+    - Run_2016
+  - name: CMS_bbtt_trig_singleMu_2016_HIPM
+    type: auto
+    channels:
+    - muTau
+    eras:
+    - Run_2016_HIPM
 
   - name: CMS_bbtt_trig_eTau_cross_ele_2018
     type: auto
@@ -1688,67 +1850,18 @@ uncertainties:
     type: auto
     eras:
     - Run_2018
-  - name: CMS_bbtt_trg_eTau_ele_2018
-    type: auto
-    channels:
-    - eTau
-    eras:
-    - Run_2018
-  - name: CMS_bbtt_trg_muTau_mu_2018
-    type: auto
-    channels:
-    - muTau
-    eras:
-    - Run_2018
   - name: CMS_bbtt_trig_MET_2017
     type: auto
-    eras:
-    - Run_2017
-  - name: CMS_bbtt_trg_eTau_ele_2017
-    type: auto
-    channels:
-    - eTau
-    eras:
-    - Run_2017
-  - name: CMS_bbtt_trg_muTau_mu_2017
-    type: auto
-    channels:
-    - muTau
     eras:
     - Run_2017
   - name: CMS_bbtt_trig_MET_2016
     type: auto
     eras:
     - Run_2016
-  - name: CMS_bbtt_trg_eTau_ele_2016
-    type: auto
-    channels:
-    - eTau
-    eras:
-    - Run_2016
-  - name: CMS_bbtt_trg_muTau_mu_2016
-    type: auto
-    channels:
-    - muTau
-    eras:
-    - Run_2016
   - name: CMS_bbtt_trig_MET_2016_HIPM
     type: auto
     eras:
     - Run_2016_HIPM
-  - name: CMS_bbtt_trg_eTau_ele_2016_HIPM
-    type: auto
-    channels:
-    - eTau
-    eras:
-    - Run_2016_HIPM
-  - name: CMS_bbtt_trg_muTau_mu_2016_HIPM
-    type: auto
-    channels:
-    - muTau
-    eras:
-    - Run_2016_HIPM
-
 autolnNThr: 0.1
 asymlnNThr: 0.001
 ignorelnNThr: 0.001
